--- a/example/package.json
+++ b/example/package.json
@@ -18,14 +18,27 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@teamwork/websocket-json-stream": "^2.0.0",
+    "debug": "^4.1.1",
+    "direction": "^1.0.3",
+    "express": "^4.17.1",
+    "is-hotkey": "^0.1.6",
+    "reconnecting-websocket": "^4.2.0",
     "rxjs": "~6.6.0",
+    "scroll-into-view-if-needed": "^2.2.20",
+    "sharedb": "^1.0.0-beta",
+    "slate": "0.63.0",
+    "slate-angular": "1.5.2",
+    "slate-history": "0.62.0",
     "tslib": "^2.3.0",
+    "ws": "^7.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/is-hotkey": "^0.1.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
