--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "ottype-slate",
     "version": "0.0.1",
     "description": "slate ot type",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "main/index.js",
+    "typings": "main/index.d.ts",
+    "module": "module/index.js",
     "dependencies": {
-        "slate": "^0.62.0"
+        "slate": "^0.65.3"
     },
     "devDependencies": {
         "@types/node": "^14.0.13",
@@ -13,9 +14,14 @@
         "ot-fuzzer": "1.3",
         "ot-simple": "^1.0.0",
         "terser": "^4.6.7",
-        "typescript": "^3.9.5"
+        "typescript": "^3.9.5",
+        "rimraf": "^3.0.2",
+        "cpx": "^1.5.0"
     },
     "scripts": {
+        "build": "rimraf dist && npm run build:main && npm run build:module && cpx package.json dist/ ",
+        "build:main": "tsc -p tsconfig.json",
+        "build:module": "tsc -p tsconfig.module.json"
     },
     "mocha": {
         "checkLeaks": true,
