--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "cpx": "^1.5.0"
     },
     "scripts": {
+        "start:demo": "cd example && npm run start",
+        "start:serve": "cd example && ts-node server.ts",
         "build": "rimraf dist && npm run build:main && npm run build:module && cpx package.json dist/ ",
         "build:main": "tsc -p tsconfig.json",
         "build:module": "tsc -p tsconfig.module.json"
