--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "direction": "^1.0.3",
     "express": "^4.17.1",
     "is-hotkey": "^0.1.6",
+    "randomcolor": "^0.6.2",
     "reconnecting-websocket": "^4.2.0",
     "rxjs": "~6.6.0",
     "scroll-into-view-if-needed": "^2.2.20",
@@ -33,7 +34,8 @@
     "slate-history": "0.62.0",
     "tslib": "^2.3.0",
     "ws": "^7.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "faker": "^5.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.9",
@@ -42,6 +44,7 @@
     "@types/is-hotkey": "^0.1.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/faker": "^5.1.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
